--- a/Tierheim/package.json
+++ b/Tierheim/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "mein-api",
+  "name": "tierheim",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "start": "nodemon index.js"
-
+    "start": "nodemon index.js"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2",
-    "nodemon": "^3.1.9",
-    "sillyname": "^0.1.0",
-   
+    "express": "^4.21.2"
   }
 }
